# robot-arm-digital-twin

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/arm-kinematics/: Cargo.toml
crates/arm-kinematics/src/: lib.rs
web/: index.html
web/src/: app.js  styles.css
